--- a/plugins/DocumentReader/DocumentReader_12.vcxproj
+++ b/plugins/DocumentReader/DocumentReader_12.vcxproj
@@ -351,6 +351,9 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
