--- a/plugins/DocumentReader/DocumentReader_12.vcxproj.filters
+++ b/plugins/DocumentReader/DocumentReader_12.vcxproj.filters
@@ -82,4 +82,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
